Skin modifier not working if applied after subsurf #58450

Closed
opened 2018-12-01 18:10:17 +01:00 by Veer Chidar · 15 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1080

Blender Version
Broken: 2.8 26d5a362ed

Worked: 2.79b

Short description of error
Stacking skin modifier after subsurf modifier creating weird results.

Exact steps for others to reproduce the error

1. Add a cube
2. Merge all vertices in edit mode to one
3. Create an L shape by extruding
4. Add Skin modifier
5. Add Subsurf modifier
6. Move subsurf modifier on top

Bug1.mp4

**System Information** Operating system: Windows 10 Graphics card: GTX 1080 **Blender Version** Broken: 2.8 26d5a362ed Worked: 2.79b **Short description of error** Stacking skin modifier after subsurf modifier creating weird results. **Exact steps for others to reproduce the error** 1. Add a cube 2. Merge all vertices in edit mode to one 3. Create an L shape by extruding 4. Add Skin modifier 5. Add Subsurf modifier 6. Move subsurf modifier on top [Bug1.mp4](https://archive.blender.org/developer/F5780780/Bug1.mp4)
Author

Added subscriber: @AppleScotch

Added subscriber: @AppleScotch

#59239 was marked as duplicate of this issue

#59239 was marked as duplicate of this issue

#58645 was marked as duplicate of this issue

#58645 was marked as duplicate of this issue

#58505 was marked as duplicate of this issue

#58505 was marked as duplicate of this issue

Added subscriber: @MetinSeven-1

Added subscriber: @MetinSeven-1

Added subscriber: @brecht

Added subscriber: @brecht

Thanks, @brecht . I should have performed a search before reporting my similar bug report, sorry.

Thanks, @brecht . I should have performed a search before reporting my similar bug report, sorry.

Added subscriber: @CedricVanderKelen

Added subscriber: @CedricVanderKelen

Added subscriber: @EricM

Added subscriber: @EricM

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-07 17:12:25 +01:00

I should note that I didn't need to move the subsurf modifier to get this result. It's enough add it first and add a skin mod on top.

I should note that I didn't need to move the subsurf modifier to get this result. It's enough add it first and add a skin mod on top.
Added subscribers: @KonstantinsVisnevskis, @Sergey, @lichtwerk

This issue was referenced by b60aedc14c

This issue was referenced by b60aedc14c3d67955ea7ebb55edf87899339cb53

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Removed subscriber: @MetinSeven-1

Removed subscriber: @MetinSeven-1
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58450
No description provided.