Fix T58450: Skin modifier not working if applied after subsurf